--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <h2>Introduction Video</h2>
 <video controls>
-    <source src="(https://youtu.be/FLSpXx4hRWU?si=-98gNRUgaIP2CExK)" type="video/mp4">
+    <source src="https://youtu.be/FLSpXx4hRWU?si=-98gNRUgaIP2CExK" type="video/mp4">
 </video>
 
 <h2>Contact Details</h2>
