--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+<img src="profile-image.jpg" alt="Lavin's Photo">
 <h2>About Me</h2>
 <p>
     Hi, I'm Lavin Valechha, a third-year engineering student with a passion for software development.
